# fig

./: Cargo.toml  README.md
crates/fig-parser/: Cargo.toml
crates/fig-parser/src/: ast.rs  lib.rs  parser.lalrpop  pretty_print.rs
crates/fig-parser/src/tests/: function_tests.rs  interface_tests.rs  mod.rs  namespace_tests.rs
crates/fig-parser/tests/: integration_tests.rs
crates/fig-parser/tests/snapshots/: integration_tests__annotations__multi_args.snap  integration_tests__annotations__no_args.snap  integration_tests__annotations__no_args.snap.new  integration_tests__annotations__stacked.snap  integration_tests__annotations__stacked.snap.new  integration_tests__annotations__with_args.snap  integration_tests__annotations__with_args.snap.new  integration_tests__comments__comments_between_definitions.snap  integration_tests__comments__comments_between_definitions.snap.new  integration_tests__comments__multiple_comments.snap  integration_tests__comments__multiple_comments.snap.new  (+250 more)
crates/nyx-lexer/: Cargo.toml
crates/nyx-lexer/examples/: indent_example.rs
crates/nyx-lexer/src/: float.rs  integer.rs  lib.rs
crates/nyx-lexer/tests/: integration_tests.rs
crates/nyx-parser/: Cargo.toml  PRETTY_PRINT.md  build.rs
crates/nyx-parser/examples/: debug_enum_tokens.rs  indentation_demo.rs  parse_example.rs  pretty_print_demo.rs  type_alias_demo.rs
crates/nyx-parser/src/: ast.rs  function_tests.rs  lib.rs  parser.lalrpop  pretty_print.rs  struct_enum_union_tests.rs
crates/nyx-parser/tests/: integration_tests.rs  type_alias_tests.rs
examples/: example-file.nyx  (+3 more)
(+849 files in other folders)
