[package]
name = "fig-parser"
version = "0.1.0"
edition = "2024"

[dependencies]
lalrpop-util = "0.20.0"
logos = "0.16.1"
fig-lexer = { path = "../fig-lexer" }
serde = { version = "1", features = ["derive"] }

[build-dependencies]
lalrpop = "0.20.0"

[dev-dependencies]
datatest-stable = "0.3.3"
insta = { version = "1.46.3", features = ["yaml"] }

[[test]]
name = "integration_tests"
harness = false
