[package]
name = "nyx-parser"
version = "0.1.0"
edition = "2024"

[dependencies]
lalrpop-util = "0.20.0"
derive-new = "0.7.0"
derive_builder = "0.20.2"
getset = "0.1.6"
logos = "0.16.1"
nyx-lexer = { path = "../nyx-lexer" }
serde = { version = "1", features = ["derive"] }

[build-dependencies]
lalrpop = "0.20.0"

[dev-dependencies]
datatest-stable = "0.3.3"
insta = { version = "1.46.3", features = ["yaml"] }

[[test]]
name = "integration_tests"
harness = false
